# GifReversingBot

./: .gitignore  Readme.md  analyze.py  keys.py  main.py  pyproject.toml  queue_client.py  requirements.txt  reversegif.py  statistics.py
core/: arguments.py  concat.py  constants.py  context.py  credentials.py  file.py  gif.py  gif_host.py  history.py  operator.py  parse.py  process.py  queue.py  regex.py  reply.py  reverse.py  secret.py  upload.py
core/hosts/: __init__.py  catbox.py  gfycat.py  imgur.py  link.py  reddit.py  redgifs.py  streamable.py
gifreversingbot/: __main__.py
gifreversingbot/core/: arguments.py  concat.py  constants.py  context.py  credentials.py  file.py  gif.py  history.py  operator.py  process.py  queue.py  regex.py  reply.py  reverse.py
gifreversingbot/core/hosts/: catbox.py  gfycat.py  imgur.py  link.py  reddit.py  redgifs.py  streamable.py
gifreversingbot/hosts/: __init__.py  catbox.py  gfycat.py  imgur.py  link.py  reddit.py  redgifs.py  streamable.py
gifreversingbot/tools/: console.py  prune_catbox.py
gifreversingbot/utils/: temp_folder.py
tests/: context.py  ghl.py  testing.py
tools/: console.py  data_analysis.py  migration.py  prune_catbox.py  statistics.py
